[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/global/Scene.gd" type="Script" id=1]
[ext_resource path="res://assets/interface/theme.tres" type="Theme" id=2]
[ext_resource path="res://source/interface/components/LoadingBar.tscn" type="PackedScene" id=3]



[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Scene" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="FPS" type="Label" parent="."]
visible = false
margin_top = 1.0
margin_right = 64.0
margin_bottom = 16.0
theme = ExtResource( 2 )
text = "120 FPS"

[node name="LoadProgress" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -12.5
margin_right = 60.0
margin_bottom = 12.5
rect_min_size = Vector2( 120, 25 )
stretch_margin_top = 3
stretch_margin_bottom = 3

[node name="Label" type="Label" parent="LoadProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
text = "Loading..."
align = 1
valign = 1
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="value_changed" from="LoadProgress" to="." method="_on_LoadProgress_value_changed"]
